--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "vite": "^5.x.x",
+    "@vitejs/plugin-react-swc": "^3.x.x",
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
   },
@@ -84,6 +86,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^5.4.20"
   }
 }
